fixed issue with photo not showing up

--- a/SalvationArmyProject/wwwroot/css/custom.css
+++ b/SalvationArmyProject/wwwroot/css/custom.css
@@ -57,7 +57,7 @@
     font-family: 'Open Sans Condensed', sans-serif;
     display: flex;
     align-items: center;
-    background-image: url("~/images/redketlle.png");
+    background-image: url("../images/redketlle.png");
     background-size: cover;
     height: 450px;
     color: rgb(200,90,0);
